@@ -37,6 +37,12 @@ namespace gui
 		//! sets another skin independent font. if this is set to zero, the button uses the font of the skin.
 		virtual void setOverrideFont(IGUIFont* font=0);
 
+		//! Gets the override font (if any)
+		virtual IGUIFont* getOverrideFont() const;
+
+		//! Get the font which is used right now for drawing
+		virtual IGUIFont* getActiveFont() const;
+
 		//! Sets an image which should be displayed on the button when it is in normal state.
 		virtual void setImage(video::ITexture* image=0);
 
